--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <section class="fifthSection">
             <h1>Download Resume</h1>
             <p>Click here to Download Abhay's Resume</p>
-            <a href="https://drive.google.com/file/d/13ngTDIGGTStRM3VQkIDTIW-Ud_JokvM5/view?usp=drive_link" target="_blank"><button>Download</button></a>
+            <a href="https://drive.google.com/file/d/13ngTDIGGTStRM3VQkIDTIW-Ud_JokvM5/view?usp=sharing" target="_blank"><button>Download</button></a>
         </section>
     </main>
 
