--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
             border-radius: 10px;
             /* background-color: rgb(88, 88, 206); */
             background-color: rgba(130, 130, 214, 0.7);
-            height: 73vh;
+            /* height: 73vh; */
             /* background-color: rgba(0, 0, 0, 0.685); */
         }
 
@@ -90,6 +90,37 @@
         #element{
             font-size: 20px;
             text-align: justify;
+        }
+
+        @media only screen and (max-width: 720px){
+            body{
+                /* background-color: red; */
+            }
+
+            .left{
+                /* border: 2px solid black; */
+                width: 100vw;
+                text-align: center;
+                /* margin: 20px auto 10px auto; */
+                margin-bottom: 0;
+            }
+            nav{
+                display: flex;
+                flex-direction: column;
+                /* justify-content: space-around; */
+                align-items: center;
+                height: 20vh;
+                background-color: rgb(27, 27, 143);
+                
+            }
+            nav .right{
+                /* border: 2px solid black; */
+                margin-top: 0;
+            }
+            .box h1 {
+                text-align: center;
+                /* margin-bottom: 40px; */
+            }
         }
     </style>
 </head>
