--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
             .leftSection{
                 /* background-color: red; */
-                /* border: 2px solid black; */
+                border: 2px solid black;
                 /* margin: 20px 0; */
                 font-size: 2rem;
-                width: 82vw;
+                width: 85%;
                 height: 55vw;
                 padding: 30px 50px 0 50px;
             }
@@ -136,6 +136,10 @@
         }
 
         @media only screen and (max-width: 442px){
+            .leftSection{
+                padding: 10%;
+            }
+
             .fourthSection h1{
                 text-align: center;
             }
