--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
             border-radius: 10px;
             /* background-color: rgb(88, 88, 206); */
             background-color: rgba(130, 130, 214, 0.7);
-            /* height: 73vh; */
+            /* height: 73vw; */
             /* background-color: rgba(0, 0, 0, 0.685); */
         }
 
