--- a/contactMe.html
+++ b/contactMe.html
@@ -63,20 +63,24 @@
             width: 50%;
             margin: 30px auto;
             padding: 30px;
-            line-height: 50px;
+            line-height: 30px;
             /* border: 3px solid black; */
             border-radius: 10px;
             /* background-color: rgb(88, 88, 206); */
             background-color: rgba(130, 130, 214, 0.7);
-            height: 73vh;
+            /* height: 73vh; */
         }
 
         .contact .details{
-            /* border: 2px solid black; */
+            border: 2px solid black;
             padding: 35px;
             /* width: 50vw; */
             margin: 20px 0 0 0;
         }
+
+        /* .contact .details .email p span{
+            font-size: 3vh;
+        } */
         .contact p{
             font-size: 20px;
         }
@@ -122,6 +126,22 @@
                 flex-direction: column;
             }
         }
+
+        @media only screen and (max-width: 707px){
+            .contact .details .email p span{
+                font-size: 3vw;
+                /* padding: 0px; */
+                /* border: 2px solid black; */
+                /* margin: 0; */
+            }
+
+            .contact .details{
+                border: 2px solid black;
+                padding: 3vw;
+                /* width: 50vw; */
+                margin: 20px 0 0 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -145,7 +165,7 @@
         <div class="details">
             <div class="email">
                 <i class="fa-solid fa-envelope" style="color: black; font-size: 20px; margin-right: 10px;"></i>
-                <p style="display: inline;">Email ID : abhay.singh3104@gmail.com</p>
+                <p style="display: inline;">Email ID : <span>abhay.singh3104@gmail.com</span></p>
             </div>
             
             <br>
