--- a/contactMe.html
+++ b/contactMe.html
@@ -72,7 +72,7 @@
         }
 
         .contact .details{
-            border: 2px solid black;
+            /* border: 2px solid black; */
             padding: 35px;
             /* width: 50vw; */
             margin: 20px 0 0 0;
@@ -136,7 +136,7 @@
             }
 
             .contact .details{
-                border: 2px solid black;
+                /* border: 2px solid black; */
                 padding: 3vw;
                 /* width: 50vw; */
                 margin: 20px 0 0 0;
