--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             .leftSection{
                 /* background-color: red; */
-                border: 2px solid black;
+                /* border: 2px solid black; */
                 /* margin: 20px 0; */
                 font-size: 2rem;
                 width: 79%;
