--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 
         <section class="fourthSection">
             <h1>Achievements</h1>
-            <li>5 Star Java Coder @HackerRank</li>
-            <li>5 Star Problem Solver @HackerRank</li>
-            <li>3 Star C++ Coder @HackerRank</li>
+            <li><span style="color: gold;  border-radius: 10px; font-weight: bold;">Gold</span> Star Java Coder @HackerRank</li>
+            <li><span style="color: gold;  border-radius: 10px; font-weight: bold;">Gold</span> Star Problem Solver @HackerRank</li>
+            <li><span style="color: silver;  border-radius: 10px; font-weight: bold;">Silver</span> Star C++ Coder @HackerRank</li>
             <li>70+ Questions Solved on LeetCode</li>
 
             <div class="profileLink">
