--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <h1>Download Resume</h1>
             <p>Click here to Download Abhay's Resume</p>
             <div class="btn">
-                <a href="https://drive.google.com/file/d/13ngTDIGGTStRM3VQkIDTIW-Ud_JokvM5/view?usp=sharing" target="_blank"><button>Download</button></a>
+                <a href="https://drive.google.com/file/d/17ejt8dJ3oEEV8rdPjIGNrLykg2NGHcbx/view?usp=drive_link" target="_blank"><button>Download</button></a>
             </div>
             
         </section>
