--- a/About.html
+++ b/About.html
@@ -87,36 +87,39 @@
             /* font-weight: bold; */
         }
 
-        #element{
+        #element {
             font-size: 20px;
             text-align: justify;
         }
 
-        @media only screen and (max-width: 720px){
-            body{
+        @media only screen and (max-width: 720px) {
+            body {
                 /* background-color: red; */
             }
 
-            .left{
+            .left {
                 /* border: 2px solid black; */
                 width: 100vw;
                 text-align: center;
                 /* margin: 20px auto 10px auto; */
                 margin-bottom: 0;
             }
-            nav{
+
+            nav {
                 display: flex;
                 flex-direction: column;
                 /* justify-content: space-around; */
                 align-items: center;
                 height: 20vh;
                 background-color: rgb(27, 27, 143);
-                
+
             }
-            nav .right{
+
+            nav .right {
                 /* border: 2px solid black; */
                 margin-top: 0;
             }
+
             .box h1 {
                 text-align: center;
                 /* margin-bottom: 40px; */
@@ -146,24 +149,33 @@
         <h1>About</h1>
         <!-- <span id="element"></span>
         <div id="element1"></div> -->
-        <p>Hii, My name is <b>Abhay</b> and my dream is to become a developer that can develop anything using
+        <p>Hi, My name is <b>Abhay</b> currently I am persuing MCA from PSIT, Kanpur. I have skills in programming in
+            which I used Java Programming language and I also have Web development skills like HTML, CSS and JavaScript.
+            My dream is to become a developer that can develop anything using
             programming languages. And I love to learn new technologies that challenges me for new difficulties. I love
             to solve problems in these. Currently I am learning Android Development
-            skills from that I can develop new applications for android operating systems.</p>
+            skills from that I can develop new applications for android operating systems. I am always ready for
+            learning new skills that will increase my knowledge in IT field.</p>
         <p style="margin-top: 15px;">I love to work alone but I can also work in a team.</p>
         <p style="margin-top: 15px;">My hobbies are listening music, and in sports I like Cricket and I love to play
             cricket with my brothers and
-            I also love Gaming. </p>
+            I also love gaming. </p>
     </div>
 
+    <div>
+        Hi, My name is Abhay
+        I have skills in programming in which I used Java Programming language and I also have Web development skills
+        like HTML, CSS and JavaScript.
+        In present time I am learning some Android development skills and I am using Java for Android development.
 
+    </div>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
     <!-- Setup and start animation! -->
     <script>
         var typed2 = new Typed('#abhay', {
-        strings: ['Abhay\'s Portfolio'],
-        typeSpeed: 50,
+            strings: ['Abhay\'s Portfolio'],
+            typeSpeed: 50,
         });
     </script>
 </body>
