--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
                     <p><span id="mca"></span></p>
                     <p>PSIT, Kanpur</p>
                     <p>2022 - Present</p>
-                    <p>Aggregate % : ND</p>
+                    <p>Aggregate % : 77.61 <br>(till 1st semester)</p>
                 </div>
                 <div class="masters">
                     <!-- <p>UG</p> -->
                     <p><span id="bsc"></span></p>
                     <p>Dr. RMLAU, Ayodhya</p>
                     <p>2019 - 2022</p>
-                    <p>Aggregate % : 76%</p>
+                    <p>Aggregate % : 76</p>
                 </div>
                 <!-- <div class="masters">
                     <h1>Intermediate</h1>
@@ -260,8 +260,10 @@
             <li><span style="color: gold;  border-radius: 10px; font-weight: bold;">Gold</span> Star Problem Solver @HackerRank</li>
             <li><span style="color: silver;  border-radius: 10px; font-weight: bold;">Silver</span> Star C++ Coder @HackerRank</li>
             <li>70+ Questions Solved on LeetCode</li>
-
+            <h1>Social Profile Links</h1>
             <div class="profileLink">
+                
+                <p>Github Profile Link - <a href="https://github.com/abhayempire" target="_blank">Click Me</a></p>
                 <p>HackerRank Profile Link - <a href="https://www.hackerrank.com/abhay_singh3104" target="_blank">Click Me</a></p>
                 <p>Leetcode Profile Link - <a href="https://leetcode.com/abhayempire64/" target="_blank">Click Me</a></p>
             </div>
