--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <!-- Setup and start animation! -->
     <script>
         var typed = new Typed('#element', {
-            strings: ['Android Developer Learner', 'Web Developer.'],
+            strings: ['The Undisputed Programmer', 'The Web Developer.'],
             typeSpeed: 50,
             backSpeed: 30,
             loop: true,
