--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <main>
         <section class="firstSection">
             <div class="leftSection">Hi, I am <span class="text">Abhay</span>  
-                <div>and I am a </div>
+                <div>and I am </div>
                 <span id="element"></span>
             </div>
             <div class="righttSection">
