--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <li><span style="color: gold;  border-radius: 10px; font-weight: bold;">Gold</span> Star Java Coder @HackerRank</li>
             <li><span style="color: gold;  border-radius: 10px; font-weight: bold;">Gold</span> Star Problem Solver @HackerRank</li>
             <li><span style="color: silver;  border-radius: 10px; font-weight: bold;">Silver</span> Star C++ Coder @HackerRank</li>
-            <li>70+ Questions Solved on LeetCode</li>
+            <li>Overall Solved 150+ DSA Questions</li>
             <h1>Social Profile Links</h1>
             <div class="profileLink">
                 
