--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <p><span id="mca"></span></p>
                     <p>PSIT, Kanpur</p>
                     <p>2022 - Present</p>
-                    <p>Aggregate % : 77.61 <br>(till 1st semester)</p>
+                    <p>Aggregate % : 74.61 <br>(till 1st year)</p>
                 </div>
                 <div class="masters">
                     <!-- <p>UG</p> -->
@@ -284,7 +284,7 @@
     <!-- Setup and start animation! -->
     <script>
         var typed = new Typed('#element', {
-            strings: ['The Undisputed Programmer', 'The Web Developer.'],
+            strings: ['The Programmer', 'The Web Developer.'],
             typeSpeed: 50,
             backSpeed: 30,
             loop: true,
