--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
             <h1>Social Profile Links</h1>
             <div class="profileLink">
                 
-                <p>Github Profile Link - <a href="https://github.com/abhayempire" target="_blank">Click Me</a></p>
+                <p>Github Profile Link - <a href="https://github.com/abhayempire6436" target="_blank">Click Me</a></p>
                 <p>HackerRank Profile Link - <a href="https://www.hackerrank.com/abhay_singh3104" target="_blank">Click Me</a></p>
-                <p>Leetcode Profile Link - <a href="https://leetcode.com/abhayempire64/" target="_blank">Click Me</a></p>
+                <p>Leetcode Profile Link - <a href="https://leetcode.com/abhayempire6436/" target="_blank">Click Me</a></p>
             </div>
         </section>
 
@@ -273,7 +273,7 @@
             <h1>Download Resume</h1>
             <p>Click here to Download Abhay's Resume</p>
             <div class="btn">
-                <a href="https://drive.google.com/file/d/1I61q6MZJRDDSLrqCKcwS2MTCMFUHVH6r/view?usp=drive_link" target="_blank"><button>Download</button></a>
+                <a href="https://drive.google.com/file/d/1g1qdT9uKc6jWc9rUTqWDYBYPUumJS1qr/view?usp=drive_link" target="_blank"><button>Download</button></a>
             </div>
             
         </section>
