--- a/contactMe.html
+++ b/contactMe.html
@@ -171,7 +171,7 @@
             <br>
             <div class="number">
                 <i class="fa-solid fa-phone" style=" color: black; font-size: 20px; margin-right: 10px;"></i>
-                <p style="display: inline-block;">Phone No.  8858104886</p>
+                <p style="display: inline-block;">Phone No.  +919651604886,  +918858104886</p>
             </div>
             
             <br>
