--- a/contactMe.html
+++ b/contactMe.html
@@ -161,7 +161,7 @@
     </header>
 
     <div class="contact">
-        <h1>Contact Details</h1>
+        <h1>Contact Details (from India)</h1>
         <div class="details">
             <div class="email">
                 <i class="fa-solid fa-envelope" style="color: black; font-size: 20px; margin-right: 10px;"></i>
@@ -183,7 +183,7 @@
             <br>
             <div class="github">
                 <i class="fa-brands fa-github" style="color: black; font-size: 20px; margin-right: 10px;"></i>
-                <p style="display: inline-block;"><a href="https://github.com/abhayempire" style="text-decoration: none; color: #fff;" target="_blank">Github</a></p>
+                <p style="display: inline-block;"><a href="https://github.com/abhayempire6436" style="text-decoration: none; color: #fff;" target="_blank">Github</a></p>
             </div>
             
         </div>
