--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <h1>Download Resume</h1>
             <p>Click here to Download Abhay's Resume</p>
             <div class="btn">
-                <a href="https://drive.google.com/file/d/1g1qdT9uKc6jWc9rUTqWDYBYPUumJS1qr/view?usp=drive_link" target="_blank"><button>Download</button></a>
+                <a href="https://drive.google.com/file/d/1Rw8GpmbEP6b4JzaH_gKDMJJs5jTAJDwu/view?usp=sharing" target="_blank"><button>Download</button></a>
             </div>
             
         </section>
@@ -284,7 +284,7 @@
     <!-- Setup and start animation! -->
     <script>
         var typed = new Typed('#element', {
-            strings: ['The Programmer', 'The Web Developer.'],
+            strings: ['a Programmer', 'a Web Developer.'],
             typeSpeed: 50,
             backSpeed: 30,
             loop: true,
